fixing card and add dark mode

--- a/client/src/assets/profile.css
+++ b/client/src/assets/profile.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  background: #DBF5FA;
 }
 
 .error-msg{
@@ -25,7 +24,6 @@
 .profile-data{
   width: 90%;
   min-height: 180px;
-  background: #DBF5FA;
   display: flex;
   flex-wrap: wrap;
 }
@@ -127,15 +125,14 @@
   height: fit-content;
   width: 100%;
   padding: 50px;
-  border-top: solid 2px rgb(189, 189, 189);
+  border-top: solid 1px rgb(32, 32, 32);
 }
 
 .work-data{
   margin-bottom: 50px;
   width: 1200px;
-  min-height: 380px;
+  min-height: 420px;
   text-align: center;
-  background: #DBF5FA;
   -webkit-box-shadow: 0px 3px 13px -2px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 3px 13px -2px rgba(0,0,0,0.75);
   box-shadow: 0px 3px 13px -2px rgba(0,0,0,0.75);
